@@ -1,8 +1,10 @@
 # -*- shell-script -*-
 HAVE_OPENSSL='@HAVE_OPENSSL@'
+OPENSSL_SUPPORTS_SNI='@OPENSSL_SUPPORTS_SNI@'
 HAVE_PYTHON='@HAVE_PYTHON@'
 HAVE_PYTHON2='@HAVE_PYTHON2@'
 HAVE_PYTHON3='@HAVE_PYTHON3@'
+HAVE_UNBOUND='@HAVE_UNBOUND@'
 EGREP='@EGREP@'
 
 if test x"$PYTHON" = x; then
